discussion/kv_engine/170277/170277_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50647: Remove ConnMap::pendingNotifications

A previous patch bypassed ConnMap pendingNotifications; frontend
threads are now directly notified.

As this makes pendingNotifications and ConnNotifier unnecessary, remove
both.

Change-Id: I1b773957472fc05000665b7099d62598bd8f99da

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-02-09 10:18:36.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-09 10:51:11.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15427/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/connmap.h:85:10: error: no type named "mutex" in namespace "std" [clang-diagnostic-error]
    std::mutex releaseLock;
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15427/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/connmap.h:85:10:
error: no type named "mutex" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15427/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36869/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/connmap.h:85:10:
error: no type named "mutex" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36869/ )

CMake error: CMakeLists.txt:134 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36869/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5076/ : FAILURE

Compile error at [2022-02-09T10:23:53.568Z] ../kv_engine/engines/ep/src/connmap.h:85:10:
error: no type named "mutex" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5076/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14270/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43699/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5134/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17155/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16243/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18203/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17464/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25562/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
